<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_shareholder"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.xinyi.boboyao.activity.ShareholderActivity">

    <include layout="@layout/activity_back_title_bar" />


    <RelativeLayout
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/activity_sellShares"
            android:textColor="@color/main_footer_selected_color"
            android:textSize="@dimen/footer_tv_size_14" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/activity_myBonus"
            android:textColor="@color/main_footer_selected_color"
            android:textSize="@dimen/footer_tv_size_14" />

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/notice_bg"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/activity_notice"
            android:textColor="@color/meaasge_text_color_black"
            android:textSize="@dimen/footer_tv_size_14" />

    </LinearLayout>


    <RelativeLayout
      android:layout_marginTop="70dp"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/changeNum_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal"
            android:orientation="horizontal">


            <TextView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/num_bg"
                android:gravity="center"

                android:text="—"
                android:textColor="@color/meaasge_text_color_black"
                android:textSize="@dimen/footer_tv_size_14" />


            <TextView
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:background="@drawable/num_bg"
                android:gravity="center"

                android:text="2"
                android:textColor="@color/meaasge_text_color_black"
                android:textSize="@dimen/footer_tv_size_14" />

            <TextView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/num_bg"
                android:gravity="center"
                android:text="+"
                android:textColor="@color/meaasge_text_color_black"
                android:textSize="@dimen/footer_tv_size_14" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@id/changeNum_layout"
            android:gravity="center"
            android:text="@string/activity_buy"
            android:textColor="@color/meaasge_text_color_black"
            android:textSize="@dimen/footer_tv_size_14" />


    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/pay_bg"
        android:paddingBottom="5dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="5dp"
        android:text="@string/activity_surePay"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/footer_tv_size_16" />

    <CheckBox

        android:id="@+id/checkbox"
        android:checked="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:button="@drawable/checkbox_bg"
        android:checkMark="?android:attr/listChoiceIndicatorMultiple"
        android:gravity="center"
        android:minHeight="40dp"
        android:text="@string/activity_checkbox_text"
        android:textColor="@color/meaasge_text_color_black"
        android:textSize="@dimen/footer_tv_size_12" />


</LinearLayout>
